--- a/.gitignore
+++ b/.gitignore
@@ -5,20 +5,8 @@
 # ignore ~
 *~
 
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
+# Packages *.egg *.egg-info dist build eggs parts bin var sdist
+develop-eggs .installed.cfg lib lib64
 
 # Installer logs
 pip-log.txt
